--- a/style.css
+++ b/style.css
@@ -2,3 +2,27 @@ body {
   background-color:#000;
   color:#fff;
 }
+
+.flex-container{
+  background-color:lightblue;
+  padding:16px;
+  border:4px solid blue;
+  margin:8px;
+  display:flex;
+}
+
+.item{
+  background-color:peachpuff;
+  border: 4px solid salmon;
+  height:48px;
+  flex:1;
+  padding:4px;
+}
+
+.item2{
+  background-color:lightgreen;
+  border: 4px solid green;
+  height:48px;
+  flex:2;
+  padding:4px;
+}
