--- a/style.css
+++ b/style.css
@@ -3,6 +3,26 @@ body {
   color:#fff;
 }
 
+/* Tables in 2024? More than likely than you think. */
+
+
+.table-container{
+  background-color:lightblue;
+  padding:16px;
+  border:4px solid blue;
+  margin:8px;
+}
+
+.table-item{
+  background-color:peachpuff;
+  border: 4px solid salmon;
+  height:48px;
+  flex:1;
+  padding:4px;
+}
+
+/* Flex below */
+
 .flex-container{
   background-color:lightblue;
   padding:16px;
