--- a/style.css
+++ b/style.css
@@ -16,9 +16,19 @@ body {
 .table-item{
   background-color:peachpuff;
   border: 4px solid salmon;
+  color:#000;
   height:48px;
   flex:1;
   padding:4px;
+}
+
+/* Button */
+
+.button {
+  background-color:lightgreen;
+  border: 4px solid green;
+  border-radius:10px;
+  color:#000;
 }
 
 /* Flex below */
