--- a/style.css
+++ b/style.css
@@ -3,8 +3,29 @@ body {
   color:#fff;
 }
 
-/* Tables in 2024? More than likely than you think. */
+/* Links */
 
+ /* unvisited link */
+a:link {
+  color: red;
+}
+
+/* visited link */
+a:visited {
+  color: green;
+}
+
+/* mouse over link */
+a:hover {
+  color: hotpink;
+}
+
+/* selected link */
+a:active {
+  color: blue;
+} 
+
+/* Tables in 2024? More than likely than you think. */
 
 .table-container{
   background-color:lightblue;
@@ -27,6 +48,14 @@ body {
 .button {
   background-color:lightgreen;
   border: 4px solid green;
+  border-radius:10px;
+  color:#000;
+  width:250px;
+}
+
+.button:hover {
+  background-color:lightyellow;
+  border: 4px solid lightorange;
   border-radius:10px;
   color:#000;
   width:250px;
