--- a/style.css
+++ b/style.css
@@ -71,6 +71,9 @@ a:active {
   margin:8px;
   display:flex block;
   clear:both;
+  /* flex-direction: column; */
+  /* justify-content: space-around; */
+  /* align-items: center; */
 }
 
 .item{
@@ -87,4 +90,85 @@ a:active {
   height:48px;
   flex:2;
   padding:4px;
+}
+
+/* Raycat Flex */
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+div {
+  background: rgba(0, 0, 0, 0.05);
+  border: 1px solid black;
+}
+
+.main-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 10px;
+}
+
+.container1, .container3 {
+  height: 25%;
+}
+
+.container1 {
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.box1 {
+  width: 30%;
+  display: flex;
+  padding: 10px;
+}
+
+.box2 {
+  width: 50%;
+}
+
+.container2 {
+  height: 50%;
+  margin: 5px 0;
+  display: flex;
+}
+
+.box4 {
+  width: 50%;
+}
+
+.container4 {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-left: 5px;
+}
+
+.box5 {
+  height: calc(45% + 5px);
+}
+
+.container3 {
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.box3 {
+  width: 15%;
+}
+
+.container2, .container4 {
+  border: none;
+  background: none;
 }
