--- a/style.css
+++ b/style.css
@@ -4,6 +4,41 @@ body {
   font-family:Tahoma, Geneva, sans-serif;
 }
 
+/* MEDIA */
+
+.mnb div {
+            margin: 10px;
+            height: 100px;
+            width: 200px;
+        }
+ 
+        .first {
+            width: 25%;
+            display: inline-block;
+            background-color: green;
+        }
+ 
+        .second {
+            width: 25%;
+            display: inline-block;
+            background-color: blue;
+        }
+ 
+        .third {
+            width: 25%;
+            display: inline-block;
+            background-color: yellow;
+        }
+ 
+        @media screen and (max-width: 500px) {
+ 
+            .first,
+            .second,
+            .third {
+                width: 70%;
+            }
+        }
+
 /* Links */
 
  /* unvisited link */
